# lift-rosak-backend

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTORS.txt  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.dev.conf.py  import_location.py  import_range.py  manage.py  pyproject.toml  range_merge.py  run_app.sh  run_celery.sh  run_celery_beat.sh  secrets.dev.env  setup.cfg  techstack.md  techstack.yml
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: auto-pr.yaml  cleanup-image.yml  push-image-ghcr.yml
.k8s/charts/: Chart.yaml  values.yaml
.k8s/deploy/: Chart.yaml  values.yaml
.semaphore/: pipeline_2.yml  semaphore.yml
@utils/: add_custom_claim.ipynb  import_range.py  import_range_utils.py
chartography/: admin.py  apps.py  enums.py  models.py  tasks.py
chartography/migrations/: 0001_initial.py  0002_remove_linevehiclestatuscounthistory_chartography_linevehiclestatuscounthistory_unique_snapshot_line.py  0003_remove_snapshot_chartography_snapshot_unique_date_source_and_more.py  0004_sourcecustomlinelinemapping_and_more.py
chartography/schema/: inputs.py  scalars.py  schema.py
common/: admin.py  apps.py  enums.py  imgur_field.py  imgur_storage.py  imgurpython_client.py  mixins.py  models.py  signals.py  tasks.py  utils.py  views.py
common/migrations/: 0001_initial.py  0002_user_badges.py  0003_user_nickname.py  0003_userjejaktransaction.py  0004_remove_media_is_removed_alter_media_file.py  0004_userjejaktransaction_credit_type.py  0005_temporarymedia.py  0006_temporarymedia_can_retry_temporarymedia_fail_count.py  0007_add_dimension_db.py  0008_add_dimension_data.py  0009_alter_media_file.py  0010_alter_temporarymedia_upload_type.py  0011_clearance_temporarymedia_status_userclearance_and_more.py  0012_clearance_data.py  0013_media_content_type_media_file_id_media_file_name_and_more.py  0014_user_telegram_id_alter_media_file_and_more.py  0014_user_telegram_id_userverificationcode.py  0014_userjejaktransaction_credit_type.py  0015_alter_media_file_featureflag.py  0016_featureflag_alter_media_file_data.py  0017_temporarymedia_discord_res_and_more.py
common/schema/: filters.py  inputs.py  loaders.py  orderings.py  scalars.py  schema.py  types.py
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
generic/: admin.py  models.py  types.py  views.py
generic/schema/: enums.py  inputs.py  scalars.py
incident/: admin.py  enums.py  models.py
incident/migrations/: 0001_initial.py  0002_stationincident_is_last_vehicleincident_is_last_and_more.py  0003_stationincident_incident_stationincident_unique_is_last_station_and_more.py  0004_calendarincidentcategory_and_more.py  0005_alter_calendarincident_severity.py  0006_alter_calendarincident_severity_and_more.py  0007_alter_calendarincidentchronology_calendar_incident_and_more.py  0007_alter_calendarincidentchronology_calendar_incident_and_more_updated.py  0008_alter_calendarincident_brief.py  0009_calendarincidentchronology_source_url.py  0010_calendarincident_inaccurate_and_more.py  0011_calendarincidentmedia_alter_calendarincident_medias.py  0012_alter_calendarincidentchronology_source_url.py  0013_alter_calendarincident_lines.py
incident/schema/: filters.py  loaders.py  orderings.py  resolvers.py  scalars.py  schema.py
jejak/: admin.py  apps.py
jejak/migrations/: 0001_initial.py  0002_accessibilitybusrangeview_busproviderrangeview_and_more.py  0002_alter_trip_identifier.py  0002_trip_jejak_trip_trip_bus_provider_unique.py  0003_remove_captain_providers_busproviderrange_bus_and_more.py
jejak/models/: __init__.py  abstracts.py  bus.py  captain.py  models.py  provider.py  views.py
jejak/schema/: filters.py  orderings.py  scalars.py  schema.py
mlptf/: admin.py  apps.py  models.py
mlptf/migrations/: 0001_initial.py
nginx/: Dockerfile
nginx/local/: default.conf.template
nginx/prod/: default.conf.template
nginx/remote/: default.conf.template
operation/: admin.py  enums.py  models.py  urls.py  views.py
operation/migrations/: 0001_initial.py  0001_initial_squashed_0015_alter_line_display_color_vehicle_wheel_status.py  0002_alter_asset_options_alter_line_options_and_more.py  0002_asset_status.py  0002_assetmedia_stationmedia_asset_medias_station_medias_and_more.py  0003_add_vehicle_vehicle_type_related_name.py  0003_remove_stationline_display_name_line_stations_and_more.py  0003_vehicletype_vehicle.py  0004_rename_stations_asset_station.py  0004_vehicleline_many_to_many_db0.py  0004_vehicletype_internal_name_alter_vehicle_notes_and_more.py  0005_alter_asset_long_description_alter_asset_officialid_and_more.py  0005_vehicle_in_service_since.py  0005_vehicleline_many_to_many_data.py  0006_alter_asset_short_description.py  0006_vehicleline_many_to_many_db1.py  0007_alter_station_options_vehicle_nickname_and_more.py  0007_remove_line_stations_remove_station_lines_and_more.py  0008_stationline_override_internal_representation_constraint_and_more.py  0009_alter_vehicleline_line_alter_vehicleline_vehicle.py  0010_asset_operation_a_short_d_88fa17_btree_and_more.py  0011_stationline_operation_stationline_unique_line_internal_representation.py  0012_alter_vehicle_status.py  0013_line_status.py  0014_line_official_numbering.py  0015_alter_line_display_color_vehicle_wheel_status.py  0016_line_calendar_incidents_line_telegram_channel_id.py  (+1 more)
reporting/: admin.py  enums.py  models.py
requirements/: base.txt
rosak/: asgi.py  celery.py  context.py  custom_view.py  permissions.py  schema.py  sentry.py  sentry_view.py  settings.py  urls.py  wsgi.py
rosak_backend/: conftest.py
spotting/: admin.py  apps.py  enums.py  models.py  serializers.py  tasks.py  views.py
telegram_provider/: admin.py  apps.py  dataclasses.py  enums.py  handlers.py  models.py  parsers.py  tasks.py  urls.py  utils.py  views.py
utils/: add_custom_claim.ipynb  constants.py  db.py  import_range_utils.py  ui.py
(+74 files in other folders)
