[project]
name = "rosak-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kwong Tung Nan", email = "tungnan5636@gmail.com" }
]
dependencies = [
    "discord-webhook>=1.3.1",
    "django-admin-rangefilter>=0.13.0",
    "django-advanced-filters>=2.0.0",
    "django-cachalot>=2.6.2",
    "django-celery-beat>=2.6.0",
    "django-celery-results>=2.5.1",
    "django-choices-field>=2.3.0",
    "django-cleanup>=8.1.0",
    "django-colorfield>=0.11.0",
    "django-cors-headers>=4.3.1",
    "django-debug-toolbar>=4.4.2",
    "django-extensions>=3.2.3",
    "django-health-check>=3.18.2",
    "django-hijack>=3.5.1",
    "django-location-field>=2.7.3",
    "django-mdeditor>=0.1.20",
    "django-model-utils>=4.5.1",
    "django-ordered-model>=3.7.4",
    "django-storages>=1.14.3",
    "djangorestframework>=3.15.1",
    "dotmap>=1.3.30",
    "firebase-admin>=6.5.0",
    "gunicorn>=22.0.0",
    "pillow>=10.3.0",
    "pillow-heif>=0.16.0",
    "promise>=2.3",
    "pymemcache>=4.0.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.5.1",
    "setuptools>=70.0.0",
    "strawberry-graphql>=0.234.2",
    "strawberry-graphql-django>=0.43.0",
    "python-telegram-bot>=21.3",
    "uvicorn[standard]>=0.30.1",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.122",
    "django==4.2.*",
    "django-asgi-lifespan>=0.3.1",
    "django-revproxy>=0.12.0",
    "celery[pymemcache,redis]>=5.4.0",
    "redis[hiredis]>=5.0.5",
    "pendulum @ git+https://github.com/kwongtn/pendulum.git@for_rosak",
    "imgurpython @ git+https://github.com/kwongtn/imgurpython.git@master",
    "psutil>=5.9.8",
    # psycopg = {extras = ["binary", "pool"], version = "3.*"}
]
readme = "README.md"
packages = [{include = "rosak_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.28.*"
celery = {extras = ["pymemcache", "redis"], version = "*"}
discord-webhook = "*"
django = "4.2.*"
django-admin-rangefilter = "*"
django-advanced-filters = "*"
django-asgi-lifespan = "^0.3.0"
django-cachalot = "*"
django-celery-beat = "*"
django-celery-results = "*"
django-choices-field = "*"
django-cleanup = "*"
django-colorfield = "*"
django-cors-headers = "*"
django-debug-toolbar = "*"
django-extensions = "*"
django-health-check = "*"
django-hijack = "*"
django-location-field = "*"
django-mdeditor = "*"
django-model-utils = "*"
django-ordered-model = "*"
django-revproxy = "^0.12.0"
django-storages = "*"
djangorestframework = "*"
dotmap = "*"
firebase-admin = "*"
gunicorn = "*"
imgurpython = {git = "https://github.com/kwongtn/imgurpython.git", rev = "master"}
pendulum = {git = "https://github.com/kwongtn/pendulum.git", rev = "for_rosak"}
pillow = "*"
pillow-heif = "*"
promise = "*"
psycopg2-binary = "^2.9.9"
# psycopg = {extras = ["binary", "pool"], version = "3.*"}
pymemcache = "*"
python-telegram-bot = "^20.8"
redis = {extras = ["hiredis"], version = "*"}
requests = "*"
sentry-sdk = "*"
setuptools = "*"
strawberry-graphql = "*"
strawberry-graphql-django = "*"
uvicorn = {extras = ["standard"], version = "*"}

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry-sort]
move-optionals-to-bottom = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
