[project]
name = "rosak-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kwong Tung Nan", email = "tungnan5636@gmail.com" }
]
dependencies = [
    "anyio==4.3.*",
    "boto3>=1.34.122",
    "celery[pymemcache,redis]>=5.4.0",
    "discord-webhook>=1.3.1",
    "django-admin-rangefilter>=0.13.0",
    "django-advanced-filters>=2.0.0",
    "django-asgi-lifespan>=0.3.1",
    "django-cachalot>=2.6.2",
    "django-celery-beat>=2.6.0",
    "django-celery-results>=2.5.1",
    "django-choices-field>=2.3.0",
    "django-cleanup>=8.1.0",
    "django-colorfield>=0.11.0",
    "django-cors-headers>=4.3.1",
    "django-debug-toolbar>=4.4.2",
    "django-extensions>=3.2.3",
    "django-health-check>=3.18.2",
    "django-hijack>=3.5.1",
    "django-location-field>=2.7.3",
    "django-mdeditor>=0.1.20",
    "django-model-utils>=4.5.1",
    "django-ordered-model>=3.7.4",
    "django-revproxy>=0.12.0",
    "django-storages>=1.14.3",
    "django==4.2.*",
    "djangorestframework>=3.15.1",
    "dotmap>=1.3.30",
    "firebase-admin>=6.5.0",
    "httpcore==1.0.4",
    "imgurpython @ git+https://github.com/kwongtn/imgurpython.git@master",
    "pendulum>=3.0.0",
    "pillow-heif>=0.16.0",
    "pillow>=10.3.0",
    "promise>=2.3",
    "psutil>=5.9.8",
    # psycopg = {extras = ["binary", "pool"], version = "3.*"}
    "psycopg2-binary>=2.9.9",
    "pymemcache>=4.0.0",
    "python-telegram-bot>=21",
    "redis[hiredis]>=5.0.5",
    "requests>=2.32.3",
    "sentry-sdk>=2.5.1",
    "setuptools>=70.0.0",
    "strawberry-graphql-django>=0.43.0",
    "strawberry-graphql>=0.234.2",
    "pygments>=2.18.0",
    "granian[reload]>=1.5.1",
    "watchfiles==0.21.*",
]
readme = "README.md"
requires-python = ">= 3.12"
license = "GNU AGPLv3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
